--- a/src/windows/app/style.css
+++ b/src/windows/app/style.css
@@ -15,7 +15,8 @@ body {
     background-color: #222;
 }
 
-.data {
+#data-container,
+#message-container {
     display: inline-block;
     padding: 20px;
 }
@@ -36,4 +37,8 @@ p {
 
 #timeago-container {
     color: #ffff11;
+}
+
+div[hidden] {
+    display: none !important;
 }
