--- a/src/windows/app/style.css
+++ b/src/windows/app/style.css
@@ -24,7 +24,7 @@ body {
 p {
     margin: 0;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 #bg-container {
